[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/ressources.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.286275, 0.317647, 0.796078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.168627 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.388235, 0.243137, 0.243137, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.168627 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.847059, 0.835294, 0.192157, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0.168627 )

[node name="Control" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1280.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -319.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = 102.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 304.0
margin_bottom = 87.0

[node name="WaterBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 304.0
margin_bottom = 26.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/WaterBox"]
margin_top = 6.0
margin_right = 44.0
margin_bottom = 20.0
text = "Water"
uppercase = true

[node name="WaterProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/WaterBox"]
unique_name_in_owner = true
margin_left = 48.0
margin_right = 304.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 56.0

[node name="EarthBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 304.0
margin_bottom = 56.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EarthBox"]
margin_top = 6.0
margin_right = 41.0
margin_bottom = 20.0
text = "Earth"
uppercase = true

[node name="EarthProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/EarthBox"]
unique_name_in_owner = true
margin_left = 45.0
margin_right = 304.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 45.0

[node name="LightBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 304.0
margin_bottom = 87.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LightBox"]
margin_top = 6.0
margin_right = 39.0
margin_bottom = 20.0
text = "Light"
uppercase = true

[node name="LightProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/LightBox"]
unique_name_in_owner = true
margin_left = 43.0
margin_right = 304.0
margin_bottom = 27.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 20.0
